--- a/scc2425-tukano/src/main/webapp/index.html
+++ b/scc2425-tukano/src/main/webapp/index.html
@@ -11,6 +11,7 @@
 
     <p>This is a dummy page for SCC backend.</p>
     <p>Use the following links for the initial resources:</p>
+    <b>check out the new korn adidas collection</b>
     </br>
     <a href="/">/</a>
 </body>
