Cosmos DB corrections & more.
Cosmos db correction on the user side, still needs work in the shorts side and deployment config fixes.

--- a/scc2425-tukano/src/main/webapp/index.html
+++ b/scc2425-tukano/src/main/webapp/index.html
@@ -13,7 +13,7 @@
     <p>Use the following links for the initial resources:</p>
     <b>check out the new korn adidas collection</b>
     </br>
-    <a href="/">/</a>
+    <a href="/rest/users">users</a>
 </body>
 
 </html>
