--- a/scc2425-tukano/src/main/webapp/index.html
+++ b/scc2425-tukano/src/main/webapp/index.html
@@ -13,8 +13,8 @@
     <p>Use the following links for the initial resources:</p>
     <b>check out the new korn adidas collection</b>
     </br>
-    <a href="/tukano-1/rest/users">users</a>
-    <a href="/tukano-1/rest/login">login</a>
+    <a href="/tukano/rest/users">users</a>
+    <a href="/tukano/rest/login">login</a>
 </body>
 
 </html>
